--- a/XTouchClient/res/Windows/PaintWindow/PaintWindow.glade
+++ b/XTouchClient/res/Windows/PaintWindow/PaintWindow.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.39.0 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkColorChooserDialog" id="ColorChooser">
@@ -41,41 +41,42 @@
           <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="margin-end">100</property>
+            <property name="spacing">50</property>
             <child>
-              <object class="GtkBox">
+              <object class="GtkEventBox" id="BackBtn">
+                <property name="width-request">100</property>
+                <property name="height-request">80</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="spacing">30</property>
                 <child>
-                  <object class="GtkEventBox" id="SaveNew">
-                    <property name="width-request">403</property>
-                    <property name="height-request">74</property>
+                  <object class="GtkStack">
+                    <property name="width-request">35</property>
+                    <property name="height-request">35</property>
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <child>
                       <object class="GtkLabel">
+                        <property name="width-request">150</property>
+                        <property name="height-request">75</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes">Сохранить как новый скриншот</property>
-                        <property name="xalign">0.6000000238418579</property>
+                        <property name="margin-left">20</property>
+                        <property name="margin-start">20</property>
+                        <property name="label" translatable="yes">Назад</property>
+                        <property name="justify">center</property>
                       </object>
                     </child>
-                    <style>
-                      <class name="SaveBtn"/>
-                    </style>
                   </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="pack-type">end</property>
-                    <property name="position">1</property>
-                  </packing>
                 </child>
+                <style>
+                  <class name="BackBtn"/>
+                </style>
               </object>
               <packing>
-                <property name="expand">True</property>
-                <property name="fill">False</property>
-                <property name="position">1</property>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
               </packing>
             </child>
             <child>
@@ -104,7 +105,62 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack-type">end</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEventBox" id="FullScreen">
+                <property name="width-request">132</property>
+                <property name="height-request">74</property>
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <child>
+                  <object class="GtkStack">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <style>
+                      <class name="ControlBtnIco"/>
+                    </style>
+                  </object>
+                </child>
+                <style>
+                  <class name="ControlBtn"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack-type">end</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEventBox" id="SaveNew">
+                <property name="width-request">403</property>
+                <property name="height-request">74</property>
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes">Сохранить как новый скриншот</property>
+                    <property name="xalign">0.6000000238418579</property>
+                  </object>
+                </child>
+                <style>
+                  <class name="SaveBtn"/>
+                </style>
+              </object>
+              <packing>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">100</property>
                 <property name="pack-type">end</property>
                 <property name="position">2</property>
               </packing>
@@ -112,8 +168,8 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
+            <property name="fill">False</property>
+            <property name="position">1</property>
           </packing>
         </child>
         <child>
@@ -140,7 +196,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
         <child>
@@ -568,7 +624,6 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="SelectColorBtn">
-                    <property name="label" translatable="yes">Выбрать цвет</property>
                     <property name="width-request">130</property>
                     <property name="height-request">68</property>
                     <property name="visible">True</property>
@@ -603,7 +658,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="pack-type">end</property>
-            <property name="position">2</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
